--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img src="static/images/figure1.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/video4.gif" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting16.jpg" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting10.PNG" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting10.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting2.JPG" class="index-img" onclick="openModal(this)">
                     <img src="static/images/concept4.png" class="index-img" onclick="openModal(this)"> 
                 </div>
