--- a/index.html
+++ b/index.html
@@ -22,22 +22,25 @@
             <div class="row">
                 <div class="column col" id="col1">
                     <img src="static/images/painting3.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/figure4.png" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/concept4.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/figure1.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/video4.gif" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting16.jpg" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting10.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting2.JPG" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/concept4.png" class="index-img" onclick="openModal(this)"> 
+                    <img src="static/images/figure4.png" class="index-img" onclick="openModal(this)"> 
+                    <img src="static/images/painting8.jpg" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting10.png" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/music1.jpg" class="index-img" onclick="openModal(this)">
                 </div>
                 <div class="column col" id="col2">
                     <img src="static/images/figure3.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/concept2.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting1.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/figure5.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/concept7.png" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting12.jpg" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/figure5.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting4.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting8.JPG" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting16.JPG" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting15.png" class="index-img" onclick="openModal(this)">
                 </div>
                 <div class="column col" id="col3">
                     <img src="static/images/concept1.png" class="index-img" onclick="openModal(this)">
@@ -45,9 +48,10 @@
                     <img src="static/images/video1.gif" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting13.jpg" class="index-img" onclick="openModal(this)">
                     <img src="static/images/concept3.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting7.jpg" class="index-img" onclick="openModal(this)">
                     <img src="static/images/video2.gif" class="index-img" onclick="openModal(this)">
                     <img src="static/images/music4.JPG" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting7.jpg" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/video5.gif" class="index-img" onclick="openModal(this)">
                 </div>
             </div>
         </div>
