--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <img src="static/images/video4.gif" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting2.JPG" class="index-img" onclick="openModal(this)">
                     <img src="static/images/figure4.png" class="index-img" onclick="openModal(this)"> 
-                    <img src="static/images/painting8.jpg" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting8.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting10.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/music1.jpg" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/music1.JPG" class="index-img" onclick="openModal(this)">
                 </div>
                 <div class="column col" id="col2">
                     <img src="static/images/figure3.png" class="index-img" onclick="openModal(this)">
@@ -39,7 +39,7 @@
                     <img src="static/images/painting12.jpg" class="index-img" onclick="openModal(this)">
                     <img src="static/images/figure5.png" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting4.png" class="index-img" onclick="openModal(this)">
-                    <img src="static/images/painting16.JPG" class="index-img" onclick="openModal(this)">
+                    <img src="static/images/painting16.jpg" class="index-img" onclick="openModal(this)">
                     <img src="static/images/painting15.png" class="index-img" onclick="openModal(this)">
                 </div>
                 <div class="column col" id="col3">
